[gd_scene load_steps=5 format=2]

[ext_resource path="res://scenes/game/ui/decision_applicant.tscn" type="PackedScene" id=2]
[ext_resource path="res://game_manager.gd" type="Script" id=4]
[ext_resource path="res://scenes/game/characters/applicant/applicant.tscn" type="PackedScene" id=5]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.00784314, 0, 0, 0 )

[node name="GameMainScene" type="Node2D"]
script = ExtResource( 4 )
applicant_scene = ExtResource( 5 )
decision_applicant_scene = ExtResource( 2 )

[node name="MainScene" type="Panel" parent="."]
margin_right = 1023.0
margin_bottom = 598.0

[node name="CVContainer" type="PanelContainer" parent="MainScene"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 25.0
margin_top = 19.0
margin_right = -798.0
margin_bottom = -279.0

[node name="JobOfferContainer" type="PanelContainer" parent="MainScene"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 502.0
margin_top = 269.0
margin_right = -321.0
margin_bottom = -29.0

[node name="ApplicantContainer" type="PanelContainer" parent="MainScene"]
anchor_left = 0.780059
anchor_right = 1.0
anchor_bottom = 0.782609

[node name="VBoxContainer" type="VBoxContainer" parent="MainScene/ApplicantContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 218.0
margin_bottom = 461.0

[node name="DecisionApplContainer" type="PanelContainer" parent="MainScene"]
anchor_left = 0.77
anchor_top = 0.153846
anchor_right = 0.868
anchor_bottom = 0.321
margin_left = -1.70996
margin_top = 388.0
margin_right = 0.0360107
margin_bottom = 388.042
custom_styles/panel = SubResource( 1 )

[node name="EndWorkingDayButton" type="Button" parent="MainScene"]
visible = false
margin_left = 888.0
margin_top = 480.0
margin_right = 1011.0
margin_bottom = 580.0
text = "Terminar DÃ­a"
